Upgrade Java runtime to version 21 LTS